AI 추천 캐싱 필요